--- a/Project/Packages/manifest.json
+++ b/Project/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.animation.rigging": "0.2.7-preview",
     "com.unity.assetbundlebrowser": "1.7.0",
     "com.unity.cinemachine": "2.3.4",
     "com.unity.collab-proxy": "1.2.16",
